# practiceC

./: .gitignore  CMakeLists.txt  main.cpp  makefile  test.grpc.pb.h  test.pb.cc
client-demo/: client.cpp
cmake/Modules/: FindGRPC.cmake  FindProtobuf.cmake  Findcppnetlib.cmake
protos/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
